manifests/advanced-policies/deny-demo/20-deployment-trusted-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trusted-client
  namespace: deny-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: trusted-client
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        access: trusted
        app: trusted-client
        role: client
    spec:
      containers:
      - command:
        - sleep
        - '3600'
        image: curlimages/curl
        imagePullPolicy: Always
        name: curl
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
