manifests/advanced-policies/deny-demo/30-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: deny-demo
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: deny-backend
  sessionAffinity: None
  type: ClusterIP
